remove sku from create and update Product API